drop table BasicTest if exists;
drop table SubTest if exists;
create table BasicTest (
    id bigint generated by default as identity,
    basicTest bigint,
    subTest bigint,
    testInt integer,
    testString varchar(20),
    testLong bigint,
    testDate date,
    testBoolean boolean,
    testFloat float,
    testDouble double,
    primary key (id)
);
create table SubTest (
    id bigint generated by default as identity,
    subTest bigint,
    name varchar(80),
    testString varchar(20),
    primary key (id)
);
alter table BasicTest
    add constraint FKcc277t88h3i853t07k4l81lij
    foreign key (basicTest)
    references BasicTest;
alter table BasicTest
    add constraint FKekncch2o599gwc9t148ygh9c6
    foreign key (subTest)
    references SubTest;
alter table SubTest
    add constraint FKowivfpy0agy32ba81eayhtgf
    foreign key (subTest)
    references SubTest;
SELECT * FROM INFORMATION_SCHEMA.TABLES;
insert
into
    SubTest
    (testString)
values
    ('testString');
insert
into
    BasicTest
    ( testString, testLong, testDate, testBoolean, testFloat, testDouble)
values
    ( 'testString', 2, null, 0, 1.1, 2.2);
insert
into
    SubTest
    (id, subTest, name, testString)
values
    (null, null, 'name', 'testString');
insert
into
    BasicTest
    (id, basicTest, subTest, testInt, testString, testLong, testDate, testBoolean, testFloat, testDouble)
values
    (null, null, null, 1, 'testString', 2, null, 0, 1.1, 2.2);