@startuml

title __ASSETS's Class Diagram__\n

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.assets {
      class BasicTest {
          {static} + SIZE : int
          {static} - LOG : Logger
          - id : Long
          - subTestList : ArrayList<SubTest>
          - subTestMap : HashMap<String, SubTest>
          - untypedList : ArrayList
          - untypedMap : HashMap
          - testInt : Integer
          - testString : String
          - testLong : Long
          - testDate : Date
          - testBoolean : Boolean
          - testFloat : Float
          - testDouble : Double
          - testObject : Object
          + getId()
          + setId()
          + getBasicTest()
          + setBasicTest()
          + getSubTest()
          + setSubTest()
          + getSubTestList()
          + setSubTestList()
          + getSubTestMap()
          + setSubTestMap()
          + getUntypedList()
          + setUntypedList()
          + getUntypedMap()
          + setUntypedMap()
          + getTestInt()
          + setTestInt()
          + getTestString()
          + setTestString()
          + getTestLong()
          + setTestLong()
          + getTestDate()
          + setTestDate()
          + isTestBoolean()
          + setTestBoolean()
          + getTestFloat()
          + setTestFloat()
          + getTestDouble()
          + setTestDouble()
          + getTestObject()
          + setTestObject()
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.assets {
      class SubTest {
          {static} - LOG : Logger
          - id : Long
          - name : String
          - testString : String
          + getId()
          + setId()
          + getSubTest()
          + setSubTest()
          + getName()
          + setName()
          + getTestString()
          + setTestString()
      }
    }
  }
  

  BasicTest o-- BasicTest : basicTest
  BasicTest o-- SubTest : subTest
  SubTest o-- SubTest : subTest


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
